# deal-intelligence

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest_log.txt  pytest_result.txt
.github/workflows/: ci.yml
configs/: data.yaml  features.yaml  model.yaml  train.yaml
data/processed/: README.md
data/raw/: README.md
notebooks/: leakage_check.py  validate_stream_c.py
scripts/: download_data.py
src/: __init__.py  config.py
src/eval/: __init__.py
src/explainability/: __init__.py
src/features/: __init__.py  sequence_dataset.py  sequence_model.py  tabular_features.py  text_features.py
src/features/resources/: hedge_words.txt
src/fusion/: __init__.py  fusion_model.py
src/ingestion/: __init__.py  deal_linker.py  email_parser.py  pipeline.py  timeline_builder.py
src/ingestion/resources/: deal_relevance_keywords.txt
src/models/: __init__.py  outcome_classifier.py  time_to_close.py  train_phase4.py
tests/: conftest.py  test_config.py  test_smoke.py
tests/fixtures/configs/: data.yaml  model.yaml
tests/fixtures/raw/enron/maildir/lay-k/inbox/: 1.  2.
tests/fixtures/raw/hubspot/: companies.csv  contacts.csv  deals.csv
tests/test_features/: test_sequence_model.py  test_tabular_features.py  test_text_features.py
tests/test_fusion/: test_fusion_model.py
tests/test_ingestion/: test_deal_linker.py  test_deal_relevance_filter.py  test_email_parser.py  test_pipeline.py  test_timeline_builder.py
