# pyproject.toml: Defines Poetry package management, dependencies, and lint/format tool configurations.
#
# WHY POETRY + LOCKFILE OVER PIP + REQUIREMENTS.TXT:
# 1. Deterministic/Reproducible Environments: Unlike pip + requirements.txt, which does not lock sub-dependencies
#    by default, Poetry uses poetry.lock to freeze the entire dependency tree (including transitive dependencies)
#    to specific hashes. This ensures every collaborator, CI runner, and production environment builds the
#    exact same package ecosystem down to the last byte.
# 2. Advanced Dependency Resolution: Poetry features a sophisticated resolver that prevents dependency hell
#    and version conflicts by checking compatibility across all nested packages before downloading.
# 3. Virtual Environment Integration: Poetry automatically creates and manages local virtual environments (.venv),
#    separating project environments from global system packages.

[tool.poetry]
name = "deal-intelligence-engine"
version = "0.1.0"
description = "Multimodal deep learning system for predicting B2B sales outcomes and inferring causal loss reasons."
authors = ["Janhavi <janhavi@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"
pandas = "^2.2.0"
pydantic = "^2.13.4"
pyarrow = "^24.0.0"
scikit-learn = "^1.9.0"
scipy = ">=1.12.0"
numpy = "^1.26.0"
torch = { version = "~2.2.0", python = ">=3.11,<3.14" }

sentence-transformers = { version = "^3.3.0", optional = true }
bertopic = { version = "^0.16.4", optional = true }
transformers = { version = "^4.47.0", optional = true }
xgboost = "<3.0.0"

[tool.poetry.extras]
dl = ["sentence-transformers", "bertopic", "transformers"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.4.10"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable standard rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.pytest.ini_options]
pythonpath = ["."]
